Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -168,3 +168,66 @@ Here's how they match:
 | **Data Link**      | Link (Network Access)   | Manages MAC addresses & switches               |
 | **Physical**       | — (part of Link layer)  | Deals with actual wires, Wi-Fi, fiber, etc.    |
 
+### Open Questions ###
+
+1. What is the OSI model, and why is it important in networking and cybersecurity?
+<details>
+  <summary>Show answer</summary>
+The OSI model is a conceptual framework that standardizes how computer systems communicate. It helps network professionals troubleshoot issues, implement security controls, and understand data flow across a network.
+</details>
+
+2. How does the concept of encapsulation work in the OSI model, and why is it essential?
+<details>
+  <summary>Show answer</summary>
+Encapsulation occurs when data moves down the OSI layers, with each layer adding its own header information. This ensures proper delivery, error checking, and security, making communication structured and reliable.
+</details>
+
+3. What are the key differences between the OSI model and the TCP/IP model?
+<details>
+  <summary>Show answer</summary>
+The OSI model has seven layers, providing a detailed framework for networking, while the TCP/IP model has four layers and is more practical for real-world internet communication. TCP/IP focuses more on protocols used in modern networks.
+</details>
+
+4. What security risks are associated with the Physical Layer, and how can they be mitigated?
+<details>
+  <summary>Show answer</summary>
+Security risks at the Physical Layer include cable tapping, hardware tampering, and electromagnetic interference. Countermeasures include tamper-proof enclosures, physical access controls, and signal encryption.
+</details>
+
+5. How does the Data Link Layer manage MAC addresses, and why is this important for network security?
+<details>
+  <summary>Show answer</summary>
+The Data Link Layer manages MAC addresses, which uniquely identify network devices. This ensures proper local network communication and security, but attackers can exploit it through MAC spoofing and ARP poisoning.
+</details>
+
+6. What role does the Transport Layer play in ensuring reliable communication, and how do TCP and UDP differ?
+<details>
+  <summary>Show answer</summary>
+The Transport Layer ensures reliable communication through TCP, which guarantees delivery and sequencing, while UDP is faster but does not provide error correction. Choosing the right protocol depends on the application’s needs.
+</details>
+
+7. What are the main functions of the Presentation Layer, and how does it relate to encryption and compression?
+<details>
+  <summary>Show answer</summary>
+The Presentation Layer ensures that data is correctly formatted, encrypted, and compressed for transmission. It plays a key role in data security, as SSL/TLS encryption operates at this layer to protect sensitive information.
+</details>
+
+8. How does the Session Layer manage communication between devices, and what are the three communication modes it supports?
+<details>
+  <summary>Show answer</summary>
+The Session Layer manages connections between devices using simplex (one-way), half-duplex (alternating), and full-duplex (simultaneous) communication modes. It ensures sessions remain active and properly synchronized.
+</details>
+
+9. Why is the Application Layer often the most vulnerable to cyberattacks, and what security measures can be implemented at this layer?
+<details>
+  <summary>Show answer</summary>
+The Application Layer is most vulnerable to attacks like phishing, malware, and injection attacks (SQL injection, cross-site scripting). Security measures include web application firewalls (WAFs), authentication controls, and secure coding practices
+</details>
+
+10. How does the OSI model support the implementation of layered security (defense in depth) in network security strategies?
+<details>
+  <summary>Show answer</summary>
+The OSI model supports layered security by addressing threats at each level. For example, firewalls protect the Network Layer, encryption secures the Presentation Layer, and endpoint security tools protect the Application Layer, creating a defense-in-depth strategy.
+</details>
+
+---
