Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -231,3 +231,17 @@ The OSI model supports layered security by addressing threats at each level. For
 </details>
 
 ---
+
+## 4.1.2 Internet Protocol (IP) version 4 and 6 (IPv6) (e.g., unicast, broadcast, multicast, anycast) ##
+
+An IP (Internet Protocol) address is a unique identifier assigned to devices connected to a network, allowing them to communicate with each other. Just like a mailing address helps postal services deliver letters, an IP address ensures that network traffic reaches the correct destination.
+Each IP address consists of two main parts:
+- Network portion – Identifies the network to which a device belongs.
+- Host portion – Identifies the specific device within that network.
+
+Think of it like a street address:
+- The Network Portion is the street name (e.g., "Main Street").
+- The Host Portion is the house number (e.g., "123").
+
+Together, they form a complete address so data can be delivered to the right location.
+
