Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -245,3 +245,28 @@ Think of it like a street address:
 
 Together, they form a complete address so data can be delivered to the right location.
 
+The subnet mask defines how much of the IP address belongs to the network and how much belongs to the host. Let’s take for example a  Class C Network (192.168.1.100/24), it has
+- IP Address: 192.168.1.100
+- Subnet Mask: 255.255.255.0 (/24)
+- The first 24 bits (192.168.1) are the Network Portion.
+- The last 8 bits (100) are the Host Portion.
+
+This means all devices in the 192.168.1.0/24 network have the same first three numbers (192.168.1), but different last numbers (host IDs).
+
+The two major versions of IP in use today are **IPv4** (Internet Protocol version 4) and **IPv6** (Internet Protocol version 6).
+
+IPv4 is the fourth version of the Internet Protocol and remains widely used despite IPv6 adoption. It uses a 32-bit address space, meaning it supports 2³² (about 4.3 billion) unique addresses.
+IPv4 addresses are written in dotted decimal notation, where four 8-bit (or octet) values are separated by dots. Each octet represents a number between 0 and 255.
+IPv4 addresses are divided into five classes (A to E) to allocate network sizes effectively.
+
+<img width="512" height="150" alt="Ipv4_Ipv6" src="https://github.com/user-attachments/assets/5a4e4073-1f52-48e7-8b39-0b1b371b89cd" />
+
+Not all IPv4 addresses are meant for internet use. Some are reserved for private networks.
+Private addresses are used within local networks and not routable on the public internet. Devices using these addresses require NAT (Network Address Translation) to communicate externally.
+
+<img width="512" height="150" alt="Ipv4_private" src="https://github.com/user-attachments/assets/1509daa1-dfc9-42c4-ab38-1b33848c0add" />
+
+For example, Your home router has one public IP (e.g., 203.0.113.5) but assigns private IPs (192.168.1.x) to devices inside your network. NAT (Network Address Translation) translates internal requests to external ones using the router's public IP.
+
+
+
