Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -268,5 +268,54 @@ Private addresses are used within local networks and not routable on the public 
 
 For example, Your home router has one public IP (e.g., 203.0.113.5) but assigns private IPs (192.168.1.x) to devices inside your network. NAT (Network Address Translation) translates internal requests to external ones using the router's public IP.
 
+Public IPs are globally routable on the internet. They are assigned by the Internet Assigned Numbers Authority (IANA) and Regional Internet Registries (RIRs).
 
+:link: [Iana](https://www.iana.org/numbers) is responsible for global coordination of the Internet Protocol addressing systems, as well as the Autonomous System Numbers used for routing Internet traffic.  
+
+**Subnetting** is the process of dividing a larger network into smaller, more manageable sub-networks, called subnets. It helps improve network performance and security by organizing IP addresses more efficiently. Subnetting also allows you to use the available IP addresses more effectively and helps to isolate network segments.
+
+When you subnet a network, you're essentially borrowing bits from the host portion of an IP address and using them for the network portion. This changes the subnet mask, which determines how many bits are used for the network and host parts of the address.
+
+How Subnetting Works ? An IP address is divided into two parts, as we said, the network portion and the host portion. The subnet mask helps to determine which part is the network portion and which part is the host portion. For example, with the IP address 192.168.1.0 and the subnet mask 255.255.255.0, the first 24 bits (the "255.255.255" part) are the network portion, and the remaining 8 bits (the "0" part) are for host addresses within that network.
+Subnetting borrows bits from the host portion and uses them to extend the network portion. This increases the number of available subnets but reduces the number of hosts that can be assigned in each subnet.
+
+:bulb: Let's try a simple example. You have the network 192.168.1.0/24 (subnet mask 255.255.255.0), which means you have 256 total IP addresses (0-255). You want to subnet this network into 4 smaller subnets.
+1. Determine how many bits to borrow: To create 4 subnets, you need 2 bits (since 2^2 = 4).
+2. Update the subnet mask: The original subnet mask was 255.255.255.0 (or /24), and we borrowed 2 bits for the subnets. This changes the subnet mask to 255.255.255.192 (or /26).
+3. New Subnets: With a /26 subnet mask, each subnet has 64 addresses (including the network and broadcast addresses). The 4 subnets will look like this:
+- Subnet 1: 192.168.1.0/26 (addresses from 192.168.1.0 to 192.168.1.63)
+- Subnet 2: 192.168.1.64/26 (addresses from 192.168.1.64 to 192.168.1.127)
+- Subnet 3: 192.168.1.128/26 (addresses from 192.168.1.128 to 192.168.1.191)
+- Subnet 4: 192.168.1.192/26 (addresses from 192.168.1.192 to 192.168.1.255)
+
+Each of these subnets can have 62 usable IP addresses (after excluding the network address and the broadcast address).
+
+:link: You don’t need to calculate subnets manually, but you must understand how subnetting impacts security policies, access control, and network architecture. A detailed explanation of subnetting is available [here] (https://en.wikipedia.org/wiki/Subnet)
+
+IPv6 was introduced to solve IPv4 exhaustion. It uses a 128-bit address space, providing 2¹²⁸ addresses (more than enough for every device on Earth).
+IPv6 addresses are written in hexadecimal notation and divided into 8 groups of 16 bits, separated by colons.
+An Example of an IPv6 Address is: 2001:0db8:85a3:0000:0000:8a2e:0370:7334
+
+IPv6 allows omitting leading zeros and compressing consecutive zero blocks:
+Full Address: 2001:0db8:0000:0000:0000:0000:8a2e:0370
+Shortened: 2001:db8::8a2e:370
+
+The following table depicts the differences between IPv4 and IPv6:
+| Feature         | IPv4                       | IPv6                       |
+|-----------------|----------------------------|----------------------------|
+| Address Length  | 32-bit                     | 128-bit                    |
+| Address Format  | Dotted Decimal             | Hexadecimal                |
+| NAT Usage       | Required due to exhaustion | Not needed                 |
+| Security        | IPSec optional             | IPSec built-in             |
+| Broadcast       | Yes                        | No (replaced by multicast) |
+
+Why IPv6 is Important for Cybersecurity ?
+- Eliminates NAT: Reduces the attack surface.
+- Built-in IPSec: Provides encryption and authentication.
+- Better address management: Prevents IP conflicts.
+
+And what are the challenges in IPv6 Adoption ?
+- Slow transition from IPv4: Many networks still use dual-stack (IPv4 & IPv6).
+- Compatibility issues: Some legacy systems do not support IPv6.
+- IPv6 Security: New attack vectors (e.g., rogue Router Advertisements).
 
